GUUD 2.0 - Actualizaciones: - Cambio de acomodo de secciones principales (noscroll) - Reacomodo de elementos en footer y menu topbar - Nuevo burguer menu - Rediseño en About us y Caring & Giving - Nueva seccion Idea - Actualizacion de recursos

--- a/src/app/guudcomponents/footer/footer.component.scss
+++ b/src/app/guudcomponents/footer/footer.component.scss
@@ -53,7 +53,8 @@
 .rights {
   font-family: 'Exo';
   text-align: center;
-  height: 6vh;
+  height: 7vh;
+  padding-top: 0.7rem;
   font-size: 0.9rem;
   line-height: 2.8rem;
   color: #707070;
