--- a/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
+++ b/src/app/guudcomponents/menu/burguermenu/burguermenu.component.html
@@ -11,10 +11,10 @@
       <li [routerLink]="'/aboutus'" (click)="_menuOpened=false;" i18n>About us</li>
       <li [routerLink]="'/history'" (click)="_menuOpened=false;" i18n>History</li>
       <li [routerLink]="'/caring'" (click)="_menuOpened=false;" i18n>Caring & giving</li>
-      <li [routerLink]="'/sustainability'" (click)="_menuOpened=false;" i18n>Sustainability</li>
+      <li [routerLink]="'/guudideas'" (click)="_menuOpened=false;" i18n>Ideas</li>
     </ul>
     <ul class="bottom">
-      <li i18n>Want to be...</li>
+      <!--li i18n>Want to be...</li-->
       <li [routerLink]="'/coach'" (click)="_menuOpened=false;" i18n>Coach</li>
       <li [routerLink]="'/supplier'" (click)="_menuOpened=false;" i18n>Supplier</li>
     </ul>
