--- a/src/app/views/aboutus/aboutus.component.html
+++ b/src/app/views/aboutus/aboutus.component.html
@@ -1,33 +1,37 @@
 <div class="displayshadow">
-  <div class="display col-11 col-lg-10 col-xl-9 col-xxl-7 m-auto">
+  <div class="display col-11 col-lg-12 col-xl-9 col-xxl-7 m-auto">
+    <br>
     <div class="row">
       <div class="col-12">
-        <h1 i18n>We are good people, <br> who wants the best of you!</h1>
-        <h4 i18n>Our purpose is create wellness and happiness around the world!</h4>
+        <h1 i18n>We are GUUD people,</h1>
+        <h4 i18n>gathering the best knowledge for human well-being.</h4>
+        <h4 i18n><img class="inputdeco" src="assets/logos_icons/Arrow.webp" alt="clip" width="60" height="60"> The secrets of your future are hidden in your daily habits.</h4>
+        <br>
+        <h4 i18n>0ur purpose: <br><br> is create wellness and happiness around the world!</h4>
       </div>
     </div>
     <div class="icons row">
       <div class="col-12 col-md-4">
-        <img alt="iconMission" src="assets/logos_icons/Mission.webp" class="svgic" width="112" height="112">
+        <img alt="iconMission" src="assets/logos_icons/Mission.webp" class="svgic" width="80" height="80">
         <h3 i18n>Mission:</h3>
-        <h5 i18n>Hack brains and shape bodies</h5>
+        <h5 i18n>Hack your brain + shape your body</h5>
       </div>
       <div class="col-12 col-md-4">
-        <img alt="iconVision" src="assets/logos_icons/Vision.webp" class="svgic" width="112" height="112">
+        <img alt="iconVision" src="assets/logos_icons/Visión.webp" class="svgic" width="110" height="110" style="margin-bottom: -1.9rem;">
         <h3 i18n>Vision:</h3>
-        <h5 i18n>Find the Guud in YOU. Let's Go!</h5>
+        <h5 i18n>Let's find the Guud in YOU. Let's Go!</h5>
       </div>
       <div class="col-12 col-md-4">
-        <img alt="iconCoreValues" src="assets/logos_icons/Core Values.webp" class="svgic" width="112" height="112">
+        <img alt="iconCoreValues" src="assets/logos_icons/Core Values.webp" class="svgic" width="80" height="80">
         <h3 i18n>Core values:</h3>
         <h5 i18n>Passion, Innovation & Fun</h5>
       </div>
     </div>
     <div class="row">
       <div class="col-8 m-auto">
-        <h6 i18n>
-          P.S Be Good!
-        </h6>
+        <h3 i18n style="text-align: center;">
+          Ps: be GUUD!
+        </h3>
       </div>
     </div>
     <br>
