--- a/src/app/views/aboutus/aboutus.component.scss
+++ b/src/app/views/aboutus/aboutus.component.scss
@@ -1,5 +1,5 @@
 .svgic {
-  width: 7rem;
+  //width: 7rem;
 }
 .display {
   padding-top: 2.3rem;
@@ -8,14 +8,14 @@
 
 .icons {
   text-align: center;
-  padding-top: 10.7rem;
+  padding-top: 3.7rem;
 
   div {
     position: relative;
   }
 
   h3 {
-    margin-top: 2.5rem;
+    margin-top: 1rem;
   }
 
   h5 {
@@ -34,7 +34,7 @@
 
 
 .icons.row .col-12.col-md-4 {
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 @media (max-width: 909px){
