--- a/src/app/views/sustainability/sustainability.component.html
+++ b/src/app/views/sustainability/sustainability.component.html
@@ -17,7 +17,7 @@
     <div class="row">
       <div class="col-8 m-auto">
         <h6 i18n>
-          P.S Be Good!
+          P.S Be GUUD!
         </h6>
       </div>
     </div>
