--- a/src/assets/guudstyles/_inputs.scss
+++ b/src/assets/guudstyles/_inputs.scss
@@ -1,7 +1,7 @@
 .guudform {
   padding: 4rem 0.6rem;
 }
-guudview-supplier .formimage, guudview-coach .formimage{
+.formimage{
   width: 36.6vw;
   position: relative;
   margin: auto;
