--- a/src/app/views/caring/caring.component.html
+++ b/src/app/views/caring/caring.component.html
@@ -1,24 +1,32 @@
 <div class="displayshadow">
-  <div class="display col-11 col-lg-10 col-xl-9 col-xxl-7 m-auto">
+  <div class="display col-11 col-lg-10 col-xl-9 col-xxl-8 m-auto">
+<br>
     <div class="row">
       <div class="col-12">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <h4 style="font-size: 2rem !important;" i18n>GUUD <br><br>Caring & Giving</h4><br>
-        <h4 i18n>Our purpose is create wellness and happiness around the world!</h4><br>
+        <br><br>
+        <h6 i18n style="font-size: 4.8rem;margin-bottom: 3.2rem;">We believe that in-order to create a GUUD world,</h6>
+        <h4 i18n>the first step is helping educate and form GUUD human beings</h4>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-8 m-auto">
-        <h6 i18n>
-          P.S Be Good!
-        </h6>
+      <div class="col-12 m-auto">
+        <div class="caringdisplay row">
+          <div class="left-display col-md-3 m-auto">
+            <span>Benjamin Salinas. 2023</span>
+            <img src="assets/images/Foto-1.webp" alt="GUUD display">
+          </div>
+          <div class="middle-display col-md-6 m-auto">
+            <span>Benjamin Salinas. 2023</span>
+            <img src="assets/images/Foto-2.webp" alt="GUUD display">
+          </div>
+          <div class="right-display col-md-3 m-auto">
+            <span>Benjamin Salinas. 2023</span>
+            <img src="assets/images/Foto-3.webp" alt="GUUD display">
+          </div>
+        </div>
+<br>
+        <h5 i18n>Our main focus is to help an organization that is devoted in the well-being of people.</h5>
       </div>
     </div>
     <br>
