--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -1,4 +1,4 @@
-<div class="displayshadow">
+<!--div class="displayshadow">
   <div class="col-sm-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7 m-auto">
     <div class="row" style="margin: auto;">
       <div class="col-xl-6 col-md-7 col-sm-8 m-auto">
@@ -9,4 +9,8 @@
       </div>
     </div>
   </div>
+</div -->
+
+<div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;">
+  <img alt="play button" src="assets/logos_icons/playbtn.webp" alt="" class="playbutton" width="100" height="900">
 </div>
