--- a/src/app/views/guudideas/guudideas.component.html
+++ b/src/app/views/guudideas/guudideas.component.html
@@ -2,10 +2,10 @@
   <div class="col-sm-12 col-md-10 col-lg-9 col-xl-8 col-xxl-7 m-auto">
     <div class="row" style="margin: auto;">
       <div class="col-xl-6 col-md-7 col-sm-8 m-auto">
-        <guudform-besupplier></guudform-besupplier>
+        <guudform-guudidea></guudform-guudidea>
       </div>
       <div class="col-xl-6 col-md-5 col-sm-8 m-auto">
-        <img alt="GUUD Supplier" src="assets/images/Guud-Supplier@2x.webp" alt="" class="formimage" width="700" height="870">
+        <img alt="GUUD Coach" src="assets/images/GUUD-Ideas.webp" alt="" class="formimage" width="700" height="870">
       </div>
     </div>
   </div>
