--- a/src/assets/guudstyles/guudstyles.scss
+++ b/src/assets/guudstyles/guudstyles.scss
@@ -26,7 +26,13 @@
 
 .displayshadow {
   box-shadow: inset 0 10px 100px $shadowcolor, inset 0 0 100px $shadowcolor;
-  padding-top: 3rem;
+  margin-top: 1.7rem;
+  height: 90vh;
+  overflow: hidden;
+}
+
+.caringdisplay [class*="-display"] img {
+  box-shadow: 0 3px 6px -2px $shadowcolor;
 }
 
 .whitedecoration {
