Ajuste bold en menu

--- a/src/app/guudcomponents/menu/topbar/topbar.component.scss
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.scss
@@ -39,7 +39,7 @@
   position: absolute;
   .activeElement {
     color: #68E242;
-    font-weight: bold;
+    //font-weight: bold;
     span {
       border-bottom: 3px solid #68E242;
     }
