Actualizacion de footer

--- a/src/app/guudcomponents/footer/footer.component.scss
+++ b/src/app/guudcomponents/footer/footer.component.scss
@@ -1,4 +1,10 @@
-
+.applist {
+  line-height: 4rem;
+  img {
+    height: 74%;
+    display: inline-block;
+  }
+}
 .logo {
   top: 0.6vw;
   position: relative;
