--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -1,3 +1,6 @@
 <div style="position: relative;background-color: #f8f8f8;">
-  <div class="rights">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span></div>
+  <div class="row" style="margin:0;">
+    <div class="col-4"><div class="rights">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span><span class="separator"></span> <span i18n>Notice of Pricacy</span></div></div>
+    <div class="col-4 offset-4 applist" i18n>Descarga la app: <img src="assets/logos_icons/AppStore.webp" alt="App Store"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store"></div>
+  </div>
 </div>
