--- a/src/app/guudcomponents/footer/footer.component.scss
+++ b/src/app/guudcomponents/footer/footer.component.scss
@@ -1,13 +1,24 @@
 .applist {
   line-height: 4rem;
   img {
-    height: 74%;
-    display: inline-block;
+    height: 3rem;
+    object-fit: contain;
   }
 }
 .logo {
   top: 0.6vw;
   position: relative;
+}
+
+
+.applist {
+  list-style: none;
+  display: inline-block;
+  position: absolute;
+  right: 1.3vw;
+  li {
+    display: inline-block;
+  }
 }
 
 .footerarea {
@@ -58,7 +69,7 @@
 
 .rights {
   font-family: 'Exo';
-  text-align: center;
+  padding-left: 1.7rem;
   height: 7vh;
   padding-top: 0.7rem;
   font-size: 0.9rem;
