Banner en GUUD Coach

--- a/src/assets/guudstyles/_mobile.scss
+++ b/src/assets/guudstyles/_mobile.scss
@@ -1,6 +1,17 @@
 .burguermenu {
   display: none;
 }
+
+@media (max-width: 830px) {
+  .bannermessage{
+    font-size: 6.4vw !important;
+    width: 100% !important;
+    right: 0 !important;
+    #join {
+      margin-bottom: 0.5rem;
+    }
+  }
+}
 @media (max-width: 1244px) {
   //Menu
   .menubar {
@@ -21,6 +32,15 @@
     height: unset;
     min-height: 90vh;
   }
+  .coachbanner{
+    bottom: 6vh !important;
+    #app{
+      opacity: 0;
+    }
+    .bannermessage{
+      //font-size: 4.4vw !important;
+    }
+  }
 
 }
 //Hom Specific
@@ -29,15 +49,11 @@
     translate: 0 1.6rem;
   }
 }
-@media (min-width: 810px) {
-  .homearea {
-    //height: 52vw;
-  }
-}
 @media (max-width: 810px) {
   .homearea {
     height: 190vw;
   }
+
 }
 @media (max-width: 420px) {
   .homearea {
@@ -59,7 +75,7 @@
     font-size: .8rem !important;
   }
   .applist{
-    position: unset !important; 
+    position: unset !important;
   }
 }
 @media (max-width: 909px) {
