--- a/src/app/views/coach/coach.component.html
+++ b/src/app/views/coach/coach.component.html
@@ -13,4 +13,23 @@
 
 <div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;">
   <img alt="play button" src="assets/logos_icons/playbtn.webp" alt="" class="playbutton" width="100" height="900">
+  <div class="coachbanner m-auto">
+    <img src="assets/logos_icons/Coach-Woman.webp" alt="GUUD Model" id="model">
+    <img src="assets/logos_icons/Cell-Coach.webp" alt="APP Coaches" id="app">
+
+    <div class="bannermessage">
+      <div class="row">
+        <div class="col-12">
+          <div class="row" id="join">
+            <div class="col-12" i18n style="transform: scale(1.4, 0.9);">BECOME A COACH</div>
+          </div>
+          <div class="row">
+            <div class="col-6"><img src="assets/logos_icons/AppStore.webp" alt="App Store"></div>
+            <div class="col-6" style="position: relative;right: 0.7rem;"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </div>
