--- a/src/app/guudcomponents/footer/footer.component.html
+++ b/src/app/guudcomponents/footer/footer.component.html
@@ -1,18 +1,12 @@
 <div style="position: relative;background-color: #f8f8f8;">
   <div class="row" style="margin:0;">
-    <div class="col-12 col-md-5"><div class="rights">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span><span class="separator"></span> <span i18n>Notice of Pricacy</span></div></div>
-    <div class="col-12 col-md-7">
-      <ul class="applist">
-        <li>
-          Descarga la app:
-        </li>
-        <li>
-          <img src="assets/logos_icons/AppStore.webp" alt="App Store">
-        </li>
-        <li>
-          <img src="assets/logos_icons/Google-Play.webp" alt="Play Store">
-        </li>
-      </ul>
+    <div class="col-1 col-sm-12 col-md-6"><div class="rights">GUUD&#174; 2023 <span class="separator"></span> <span i18n>All rights reserved</span><span class="separator"></span> <span i18n>Notice of Pricacy</span></div></div>
+    <div class="col-1 col-sm-12 col-md-6">
+      <div class="row" style="white-space: nowrap;font-weight:bold;color:#1B4544;line-height: 4rem;">
+        <div class="col-1 col-sm-12 col-md-3 col-lg-3 offset-md-0 offset-lg-3">Descarga la app:</div>
+        <div class="col-1 col-sm-6 col-md-4 col-lg-3"><img src="assets/logos_icons/AppStore.webp" alt="App Store" style="height: 3rem;"></div>
+        <div class="col-1 col-sm-6 col-md-4 col-lg-3"><img src="assets/logos_icons/Google-Play.webp" alt="Play Store" style="height: 3rem;"></div>
+      </div>
     </div>
   </div>
 </div>
