--- a/src/app/guudcomponents/footer/footer.component.scss
+++ b/src/app/guudcomponents/footer/footer.component.scss
@@ -69,7 +69,7 @@
 
 .rights {
   font-family: 'Exo';
-  padding-left: 1.7rem;
+  padding-left: .7rem;
   height: 7vh;
   padding-top: 0.7rem;
   font-size: 0.9rem;
