--- a/src/app/guudcomponents/menu/topbar/topbar.component.html
+++ b/src/app/guudcomponents/menu/topbar/topbar.component.html
@@ -1,14 +1,53 @@
 <nav class="menubar">
-  <img [routerLink]="'/'" src="assets/logos_icons/logo-Guud.webp" width="160" height="80" alt="Logo" class="logo" i18n-alt i18n-src>
+  <div class="row">
+    <div class="col-12">
+      <div class="row navigation">
 
+        <div class="col-2" style="background-color:#fff;">
+          <img [routerLink]="'/'" src="assets/logos_icons/logo-Guud.webp" width="160" height="80" alt="Logo" class="logo" i18n-alt i18n-src>
+        </div>
+        <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/aboutus" style="background-color:#fff;"><span i18n>About us</span></div>
+        <div class="col-1 webdisplay" routerLinkActive="activeElement" routerLink="/history" style="background-color:#fff;"><span i18n>History</span></div>
+        <div class="col-1 webdisplay" style="background-color:#fff;" routerLinkActive="activeElement" routerLink="/caring"><span i18n>Caring & giving</span></div>
+        <div class="col-1 webdisplay" style="background-color:#fff;" routerLinkActive="activeElement" routerLink="/guudideas"><span i18n>Ideas</span></div>
+
+        <div class="col-2 webdisplay">
+          <div class="row">
+            <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/supplier" style="font-weight:bold;"><span i18n>Supplier</span></div>
+            <div class="col-6 bluefont" routerLinkActive="activeElement" routerLink="/coach" style="font-weight:bold;"><span i18n>Coach</span></div>
+          </div>
+        </div>
+        <div class="col-2 webdisplay" style="background-color:#fff;">
+          <div class="row">
+            <div class="col-4" style="font-size: 0.8rem;font-weight: bold;line-height: 1.6rem;"><span i18n>Follow us!</span></div>
+            <div class="col-8">
+              <div class="socialbar">
+                <span class="icon-facebook bubble"></span>
+                <span class="icon-instagram bubble"></span>
+                <span class="icon-twitter bubble"></span>
+                <span class="icon-linkedin2 bubble"></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-8 mobdisplay" style="background-color:#fff;"></div>
+        <div class="col-2" style="background-color:#fff;">
+          <guud-burguermenu></guud-burguermenu>
+          <guud-langmenu class="webdisplay"></guud-langmenu>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+
+  <!--img [routerLink]="'/'" src="assets/logos_icons/logo-Guud.webp" width="160" height="80" alt="Logo" class="logo" i18n-alt i18n-src>
   <ul class="navigation">
     <li  routerLinkActive="activeElement" routerLink="/aboutus" style="background-color:#fff;" i18n><span>About us</span></li>
     <li  routerLinkActive="activeElement" routerLink="/history" style="background-color:#fff;" i18n><span>History</span></li>
     <li style="background-color:#fff;"  routerLinkActive="activeElement" routerLink="/caring" i18n><span>Caring & giving</span></li>
-    <!--[routerLink]="'/caring'"-->
     <li style="background-color:#fff;"  routerLinkActive="activeElement" routerLink="/guudideas" i18n><span>Ideas</span></li>
-    <!--[routerLink]="'/sustainability'"-->
-    <!--li class="bluefont nocursor" i18n>Want to be...</li-->
     <li class="bluefont" routerLinkActive="activeElement" routerLink="/supplier" style="font-weight:bold;" i18n><span>Supplier</span></li>
     <li class="bluefont" routerLinkActive="activeElement" routerLink="/coach" style="font-weight:bold;" i18n><span>Coach</span></li>
 
@@ -19,9 +58,6 @@
       <span class="icon-twitter bubble"></span>
       <span class="icon-linkedin2 bubble"></span>
     </li>
-  </ul>
-
-  <guud-burguermenu></guud-burguermenu>
-  <guud-langmenu></guud-langmenu>
+  </ul-->
 
 </nav>
