--- a/src/app/guudcomponents/formularios/guudidea/guudidea.component.html
+++ b/src/app/guudcomponents/formularios/guudidea/guudidea.component.html
@@ -35,12 +35,14 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <label class="labeledinput" [ngClass]="{'active': dataFormat.filename}">
+
+      <div class="dropzone">
         <img class="inputdeco" src="assets/logos_icons/Clip.webp" alt="clip" width="36" height="36">
-        <input type="file" (change)="_setfiles($event)" ngModel name="filename" accept="video/mp4,video/x-m4v,video/*">
-        <div class="fileinput"><p>{{dataFormat.filename}}</p></div>
-        <span i18n>Video*</span>
-      </label>
+        <span *ngIf="dataFormat.filename == ''" i18n>Video Drop Zone*</span>
+        <span *ngIf="dataFormat.filename != ''">{{dataFormat.filename}}</span>
+        <input type="file" class="dropzone" (change)="_setfiles($event)" ngModel name="filename" accept="video/mp4,video/x-m4v">
+      </div>
+
     </div>
   </div>
 
