--- a/src/assets/guudstyles/_inputs.scss
+++ b/src/assets/guudstyles/_inputs.scss
@@ -22,7 +22,7 @@
 input:not([type="checkbox"], [type="radio"]),
 select,
 .fileinput {
-  &[type="file"] {
+  &[type="file"]:not(.dropzone) {
     display: none;
   }
   -webkit-appearance: none;
