--- a/src/app/guudcomponents/formularios/besupplier/besupplier.component.html
+++ b/src/app/guudcomponents/formularios/besupplier/besupplier.component.html
@@ -27,12 +27,12 @@
       </label>
     </div>
     <div class="col-12 col-sm-6">
-      <label class="labeledinput" [ngClass]="{'active': dataFormat.filename}">
-        <img class="inputdeco" src="assets/logos_icons/Clip.webp" alt="clip" width="36" height="36">
-        <input type="file" (change)="_setfiles($event)" ngModel name="filename" accept="image/*">
-        <div class="fileinput"><p>{{dataFormat.filename}}</p></div>
-        <span i18n>Product Images</span>
-      </label>
+      <div class="dropzone" style="height: 3rem;margin-top: 1rem;">
+        <img class="inputdeco" src="assets/logos_icons/Clip.webp" style="top:.5rem;" alt="clip" width="36" height="36">
+        <span *ngIf="dataFormat.filename == ''" style="top:.8rem;" i18n>Images Drop Zone*</span>
+        <span *ngIf="dataFormat.filename != ''" style="top:.8rem;">{{dataFormat.filename}}</span>
+        <input type="file" class="dropzone" (change)="_setfiles($event)" ngModel name="filename" accept="image/*" style="height: 3rem;">
+      </div>
     </div>
   </div>
   <div class="row">
