--- a/src/app/views/history/history.component.html
+++ b/src/app/views/history/history.component.html
@@ -1,11 +1,7 @@
 <div [ngClass]="{'displayshadow':_apply}" style="background-color: #70707094;">
-  <!--img alt="play button" src="assets/logos_icons/playbtn.webp" alt="" class="playbutton" width="100" height="900"-->
-  <!--guud-videoplayer [_data]="'assets/videos/HistoriaGUUD.mp4'"></guud-videoplayer-->
-  <!--video controls="controls" autoplay="auto" loop="loop" id="videoplayerhistory" style="display: block; width: 100%;height: 95%;margin-top: 4vh;">
-    <source id="VideoReload" src="'https://drive.google.com/file/d/1SkumgbLdkE2wkHkTdEAJLtxhIFe_SKIN/view'" type="video/mp4" />
-  </video-->
-  <video preload="metadata" controls="controls" autoplay="auto" loop="loop" class="videoPlayer" style="display: block; width: 100%;height: 95%;margin-top: 4vh;">
-    <source id="VideoReload" [src]="'https://guudblob.blob.core.windows.net/admin/HistoriaGUUD.mp4'" type="video/mp4" />
-  </video>
+
+  <div class="guudvideo">
+    <video id="videoplayerhistory" class="videoPlayer" width="innerWidth" height="innerHeight"></video>
+  </div>
 
 </div>
