--- a/src/assets/guudstyles/guudstyles.scss
+++ b/src/assets/guudstyles/guudstyles.scss
@@ -44,6 +44,18 @@
   background-color: $mainbackground;
 }
 
-
+.guudvideo {
+  position: absolute;
+  width: 100%;
+  height: 87vh;
+  top: 6vh;
+  [id*="videoplayerhistory"]{
+    width: 100%;
+    height: 100%;
+  }
+  *:not([id*="videoplayerhistory"]){
+    display: none;
+  }
+}
 
 @import '_mobile.scss';
